Remove preloader stuff; fix a11y contrast for light mode.

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,7 +1,9 @@
-$accent-color: rgb(232, 135, 58);
+$accent-color: #e37824;
+$link-color-light: #bf5500;
 $border-color-dark: #404242;
 $border-color-light: #ececec;
 $primary-text-color-dark: #979899;
-$primary-text-color-light: #939393;
+$primary-text-color-light: #727272;
+$heading-text-color-light: #5e5e5e;
 $placeholder-text-color-light: #c6c6c6;
 $placeholder-text-color-dark: #717273;
