--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "variables";
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Set default font family to sans-serif.
@@ -1825,51 +1826,6 @@ img[height] {
   overflow-x: hidden;
 }
 
-.c-preloader {
-  display: none;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -ms-flex-align: center;
-  align-items: center;
-  text-align: center;
-  height: 100%;
-}
-
-.js-enabled .c-preloader {
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.c-preloader__spinner {
-  min-width: 70px;
-  min-height: 70px;
-}
-
-.c-preloader__spinner:before {
-  content: "Loading…";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -35px;
-  margin-left: -35px;
-}
-
-@keyframes c-preloader__spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.c-preloader__spinner:not(:required):before {
-  content: "";
-  border-radius: 50%;
-  border: 4px solid transparent;
-  animation: c-preloader__spinner 0.8s ease infinite;
-  -webkit-animation: c-preloader__spinner 0.8s ease infinite;
-}
-
 .c-progress-bar {
   position: relative;
   height: 5px;
@@ -2128,7 +2084,6 @@ img[height] {
 
 .c-work__timeframe,
 .c-work__location {
-  opacity: 0.6;
   font-size: 0.7rem;
 }
 
